--- a/views/register.ejs
+++ b/views/register.ejs
@@ -12,11 +12,11 @@
     <h1>Registrieren</h1>
     <% if (error) { %><p class="error"><%= error %></p><% } %>
     <form method="post" action="/register">
-      <label>Benutzername:
-        <input type="text" name="username" required>
+      <label>Benutzername
+        <input type="text" name="username" required autocomplete="username">
       </label>
-      <label>Passwort:
-        <input type="password" name="password" required>
+      <label>Passwort
+        <input type="password" name="password" required autocomplete="new-password">
       </label>
       <button type="submit">Registrieren</button>
     </form>
